# thinkloom-openai-hackathon

./: .gitignore  CODEX_COLLABORATION_LOG.md  DEMO_SCRIPT.md  HACKATHON_SUBMISSION.md  IMPLEMENTATION_STATUS.md  JUDGING.md  PROMPTS.md  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.desktop.config.ts
.openai/: hosting.json
app/: layout.tsx  page.tsx  thinkloom.tsx
db/: index.ts
desktop/: index.html  main.tsx
docs/provenance/: COMPLETION-CHECKLIST.md  README.md  STAGE-1-NORMATIVE-SPECIFICATION.md  (+11 more)
public/: writing-workspace-framework.html
scripts/: generate-provenance-stage2.mjs  provenance-stage2-lib.mjs
src/: HarpExportPanel.tsx  ProvenanceWorkspace.tsx  Thinkloom.tsx  export.css  globals.css  main.tsx  provenance.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/prompts/: conversation.json  drafting.json
src-tauri/src/: lib.rs  main.rs  project_format.rs
src-tauri/src/provenance/: assertions.rs  canonical.rs  composition.rs  contribution_map.rs  explorer.rs  export.rs  harp.rs  identifiers.rs  ledger.rs  mod.rs  phase1.rs  projections.rs  records.rs  recovery.rs  tests.rs  verifier.rs  writer.rs
tests/: composition-provenance.test.mjs  contribution-map.test.mjs  harp-export.test.mjs  harp-generation.test.mjs  native-app.test.mjs  native-cpl.test.mjs  phase1-provenance.test.mjs  project-format.test.mjs  provenance-schema.test.mjs  provenance-ui.test.mjs  rendered-html.test.mjs  verification-matrix.test.mjs  windows-package.test.mjs
(+173 files in other folders)
