[package]
name = "thinkloom"
version = "0.2.0"
description = "Local-first writing studio with creative provenance"
authors = ["Christopher Chambers"]
license = "AGPL-3.0-only"
repository = "https://github.com/Labyricorn/thinkloom-openai-hackathon.git"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "thinkloom_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
keyring = "3"
rfd = "0.15"
walkdir = "2"
tempfile = "3"

[dev-dependencies]
pretty_assertions = "1"
